[gd_scene load_steps=9 format=3 uid="uid://bu7kdn5dr5aor"]

[ext_resource type="Script" uid="uid://cmagfu3k1wtwr" path="res://scenes/game_core/game_runner.gd" id="1_3sh3x"]
[ext_resource type="Theme" uid="uid://cn5xuu2uvf5w3" path="res://assets/themes/theme.tres" id="3_4kpoj"]
[ext_resource type="PackedScene" uid="uid://btg6pnsjf142h" path="res://scenes/menus/pause_menu.tscn" id="3_vb0gl"]
[ext_resource type="PackedScene" uid="uid://cbmt0q3frns" path="res://assets/scene_fader.tscn" id="4_oxp31"]
[ext_resource type="PackedScene" uid="uid://dllddnf7rpmox" path="res://scenes/game_core/property_change.tscn" id="6_hifqd"]
[ext_resource type="PackedScene" uid="uid://84wk8lfpyvk4" path="res://scenes/game_core/in_game_menus/game_score.tscn" id="6_qcncn"]
[ext_resource type="PackedScene" uid="uid://blxwqysuqrs4c" path="res://scenes/game_core/in_game_menus/state.tscn" id="7_ttgl3"]
[ext_resource type="PackedScene" uid="uid://ca4r5cak5lcwv" path="res://assets/debug/grid.tscn" id="9_hifqd"]

[node name="GameRunner" type="Node"]
process_mode = 3
script = ExtResource("1_3sh3x")

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 2
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -219.0
offset_right = 500.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_4kpoj")
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="ButtonsVBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -1000)
anchor_mode = 0

[node name="SceneFader" parent="." instance=ExtResource("4_oxp31")]
position = Vector2(842, 260)

[node name="pauseMenu" parent="." node_paths=PackedStringArray("game_runner") instance=ExtResource("3_vb0gl")]
visible = false
game_runner = NodePath("..")

[node name="Control" type="CanvasLayer" parent="."]

[node name="Control" type="MarginContainer" parent="Control"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -166.0
offset_right = 400.0
grow_vertical = 0
theme = ExtResource("3_4kpoj")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="Control/Control"]
layout_mode = 2
size_flags_vertical = 8
localize_numeral_system = false
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Control/MarginContainer"]
layout_mode = 2

[node name="Layer2" type="HBoxContainer" parent="Control/Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBox_enrich" type="CheckButton" parent="Control/Control/MarginContainer/VBoxContainer/Layer2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme = ExtResource("3_4kpoj")
theme_override_font_sizes/font_size = 15
button_pressed = true
text = "Auto enrich 20%"

[node name="CheckBox_spontain_neutron_emis" type="CheckButton" parent="Control/Control/MarginContainer/VBoxContainer/Layer2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme = ExtResource("3_4kpoj")
theme_override_font_sizes/font_size = 15
button_pressed = true
text = "Delayed Neutrons
"

[node name="Layer1" type="HBoxContainer" parent="Control/Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Enrich_bar" type="ProgressBar" parent="Control/Control/MarginContainer/VBoxContainer/Layer1"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 2
size_flags_vertical = 1
value = 30.0
show_percentage = false

[node name="Label" type="Label" parent="Control/Control/MarginContainer/VBoxContainer/Layer1/Enrich_bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 10.0
offset_right = -1.0
offset_bottom = 9.44
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_4kpoj")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 15
text = "Percent"
horizontal_alignment = 1
vertical_alignment = 3

[node name="enable_ctrl_rods" type="CheckButton" parent="Control/Control/MarginContainer/VBoxContainer/Layer1"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme = ExtResource("3_4kpoj")
theme_override_font_sizes/font_size = 15
button_pressed = true
text = "Enable Auto Ctrl Rods"

[node name="Tree" parent="Control/Control/MarginContainer/VBoxContainer" instance=ExtResource("6_hifqd")]
custom_minimum_size = Vector2(420, 40)
layout_mode = 2
theme = ExtResource("3_4kpoj")

[node name="GameScore" parent="." instance=ExtResource("6_qcncn")]

[node name="State" parent="." instance=ExtResource("7_ttgl3")]

[node name="enrich_timer" type="Timer" parent="."]
process_mode = 1
wait_time = 60.0

[node name="loss_timer" type="Timer" parent="."]
process_mode = 1
wait_time = 25.0

[node name="upgrade_timer" type="Timer" parent="."]
process_mode = 1

[node name="Grid" parent="." instance=ExtResource("9_hifqd")]

[connection signal="toggled" from="Control/Control/MarginContainer/VBoxContainer/Layer2/CheckBox_enrich" to="." method="_on_check_box_enrich_toggled"]
[connection signal="toggled" from="Control/Control/MarginContainer/VBoxContainer/Layer2/CheckBox_spontain_neutron_emis" to="." method="_on_check_box_spontain_neutron_emis_toggled"]
[connection signal="toggled" from="Control/Control/MarginContainer/VBoxContainer/Layer1/enable_ctrl_rods" to="." method="_on_check_box_enrich_2_toggled"]
[connection signal="item_edited" from="Control/Control/MarginContainer/VBoxContainer/Tree" to="." method="_on_tree_item_edited"]
[connection signal="timeout" from="enrich_timer" to="." method="_on_enrich_timer_timeout"]
[connection signal="timeout" from="loss_timer" to="." method="_on_loss_timer_timeout"]
[connection signal="timeout" from="upgrade_timer" to="." method="_on_upgrade_timer_timeout"]
